Part_4/exercise 4.06/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: ns-project
  name: img-ingress
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: front-svc
                port:
                  number: 2345
          - path: /todos
            pathType: Prefix
            backend:
              service:
                name: backend-svc
                port:
                  number: 2222
